--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
           <artifactId>spring-webmvc</artifactId>
           <version>5.3.9</version>
       </dependency>
+      
+	<dependency>
+	    <groupId>org.hibernate</groupId>
+	    <artifactId>hibernate-core</artifactId>
+	    <version>5.5.2.Final</version>
+	</dependency>
 	
 	<dependency>
 		<groupId>mysql</groupId>
