--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
           <version>5.3.9</version>
       </dependency>
       
+      <dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>2.5.4</version>
+		</dependency>
+      
 	<dependency>
 	    <groupId>org.hibernate</groupId>
 	    <artifactId>hibernate-core</artifactId>
