--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
 		<artifactId>javax.servlet-api</artifactId>
 		<version>3.0.1</version>
 	</dependency>
+  
+  <dependency>
+    <groupId>jstl</groupId>
+    <artifactId>jstl</artifactId>
+    <version>1.2</version>
+</dependency>
   </dependencies>
 
   <build>
